# graphql-rust-sample

./: .gitignore  Cargo.toml  Makefile.toml  README.md  docker-compose.yml
crates/adapter-axum/: Cargo.toml
crates/adapter-axum-graphql/: Cargo.toml  gen-schema.ers
crates/adapter-axum-graphql/src/: lib.rs  main.rs  model.rs
crates/adapter-axum-graphql/src/model/: kanban.rs  starwars.rs
crates/adapter-axum-graphql/src/model/kanban/: dataloader.rs  simple.rs  storage.rs  validate.rs
crates/adapter-axum-graphql/src/model/kanban/dataloader/: loaders.rs
crates/adapter-axum/src/: lib.rs
crates/adapter-graphql/: Cargo.toml
crates/domain-kanban/: Cargo.toml
crates/domain-kanban/src/: board.rs  column.rs  lib.rs  user.rs
crates/domain-kanban/src/user/: email.rs  user_name.rs
crates/domain-util/: Cargo.toml
crates/domain-util/src/: error.rs  identifier.rs  lib.rs
crates/infrastructure-dynamodb/: Cargo.toml
crates/infrastructure-dynamodb/src/: lib.rs  repository.rs  test_util.rs  user.rs
crates/infrastructure-dynamodb/src/repository/: user.rs
crates/infrastructure-rdb/: Cargo.toml
crates/infrastructure-rdb/src/: lib.rs  query.rs  sample.rs
crates/infrastructure-rdb/src/query/: board.rs  card.rs  column.rs  user.rs
crates/main/: Cargo.toml
crates/main/src/: main.rs
crates/migrate/: Cargo.toml
crates/migrate/migrations/: 20231003003101_create_users_table.up.sql  20231003003112_create_boards_table.up.sql  20231003003117_create_columns_table.down.sql  20231003003117_create_columns_table.up.sql  20231003003122_create_cards_table.up.sql  20231003135519_create_user_board_relations_table.down.sql  20231003135519_create_user_board_relations_table.up.sql  20231003135711_create_board_column_relations_table.down.sql  20231003135711_create_board_column_relations_table.up.sql
crates/migrate/src/: main.rs
crates/presentation-axum/: Cargo.toml
crates/presentation-axum/src/: lib.rs
crates/presentation-graphql/: Cargo.toml
crates/presentation-graphql/src/: dataloader.rs  extensions.rs  lib.rs  model.rs  provides.rs  scalar.rs  validator.rs
crates/presentation-graphql/src/dataloader/: board.rs  card.rs  column.rs  user.rs
crates/presentation-graphql/src/model/: board.rs  column.rs  user.rs
crates/query-resolver/: Cargo.toml
crates/query-resolver/src/: board.rs  card.rs  column.rs  lib.rs  user.rs
crates/scripts/: Cargo.toml
macros/invariant-sheild/: Cargo.toml
macros/invariant-sheild-macros/: Cargo.toml
macros/invariant-sheild-macros/src/: lib.rs
macros/invariant-sheild-types/: Cargo.toml
macros/invariant-sheild-types/src/: lib.rs
macros/invariant-sheild/src/: lib.rs
macros/invariant-sheild/tests/: functions.rs
