[workspace]
members = [ 'crates/*' ]

[workspace.dependencies]
anyhow = "1.0.72"
async-trait = "0.1.72"
futures-util = "0.3.28"
thiserror = "1.0.47"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
ulid = "1.0.1"

# layer paths ----------------
## presentation
presentation-axum = { path = "./crates/presentation-axum" }
presentation-graphql = { path = "./crates/presentation-graphql" }

## infrastructure
infrastructure-rdb = { path = "./crates/infrastructure-rdb" }

## query
query-resolver = { path = "./crates/query-resolver" }

## domain
domain-kanban = { path = "./crates/domain-kanban" }
domain-util = { path = "./crates/domain-util" }
