[workspace]
members = [ 'crates/*', 'macros/*' ]
default-members = [ 'crates/main' ]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.72"
async-trait = "0.1.72"
futures-util = "0.3.28"
itertools = "0.11.0"
shaku = "0.6.1"
sqlx = "0.7.2"
# testcontainers = "0.16.7"
testcontainers-modules = "0.4.2"
thiserror = "1.0.47"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"


# layer paths ----------------
## presentation
presentation-axum = { path = "./crates/presentation-axum" }
presentation-graphql = { path = "./crates/presentation-graphql" }

## infrastructure
infrastructure-rdb = { path = "./crates/infrastructure-rdb" }
infrastructure-dynamodb = { path = "./crates/infrastructure-dynamodb" }

## query
query-resolver = { path = "./crates/query-resolver" }

## domain
domain-kanban = { path = "./crates/domain-kanban" }
domain-util = { path = "./crates/domain-util" }

# macro paths ----------------
invariant-sheild = { path = "./macros/invariant-sheild" }
invariant-sheild-types = { path = "./macros/invariant-sheild-types" }
invariant-sheild-macros = { path = "./macros/invariant-sheild-macros" }

# comprex dependencies
[workspace.dependencies.serde]
version = "1.0.200"
features = ["derive"]

[workspace.dependencies.tokio]
version = "1.29.1"
features = ["macros", "rt-multi-thread"]

[workspace.dependencies.ulid]
version = "1.0.1"
features = ["serde"]
