[package]
name = "adapter-axum-graphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "6.0.0"
async-graphql-axum = "6.0.0"
axum = { version = "0.6.19", features = ["headers"] }
hyper = "0.14.27"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
