[package]
name = "domain-kanban"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
shaku.workspace = true
thiserror.workspace = true

# layer paths ----------------
domain-util.workspace = true

invariant-sheild.workspace = true
