[package]
name = "infrastructure-dynamodb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
aws-config = "1"
aws-sdk-dynamodb = "1"
shaku.workspace = true

# layer paths ----------------
domain-kanban.workspace = true
