[package]
name = "infrastructure-dynamodb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
aws-config = "1.3.0"
aws-sdk-dynamodb = "1.25.0"
serde.workspace = true
shaku.workspace = true

# layer paths ----------------
domain-kanban.workspace = true

[dependencies.serde_dynamo]
version = "4.2.14"
features = ["aws-sdk-dynamodb+1"]

[dev-dependencies]
testcontainers-modules = { workspace = true, features = ["localstack"] }
tokio.workspace = true