[package]
name = "main"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# layer paths ----------------
presentation-axum.workspace = true
infrastructure-rdb.workspace = true


[dependencies.tokio]
version = "1.29.1"
features = ["macros", "rt-multi-thread"]
