[package]
name = "migrate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
tokio.workspace = true

infrastructure-rdb.workspace = true

[dependencies.sqlx]
workspace = true
features = [
  "postgres",
]
