[package]
name = "presentation-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
presentation-graphql = { path = "../presentation-graphql" }
anyhow = "1.0.72"
async-graphql-axum = "6.0.0"
axum = { version = "0.6.19", features = ["headers"] }
axum-macros = "0.3.8"
tracing = "0.1.37"
