[package]
name = "presentation-axum"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow.workspace = true
async-graphql-axum = "6.0.0"
axum-macros = "0.3.8"
tracing.workspace = true

# layer paths ----------------
presentation-graphql.workspace = true


[dependencies.axum]
version = "0.6.19"
features = ["headers"]
