[package]
name = "presentation-graphql"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow.workspace = true
async-trait.workspace = true
futures-util.workspace = true
shaku.workspace = true

# layer paths ----------------
# TODO: 取り除きたい
infrastructure-rdb.workspace = true
query-resolver.workspace = true
domain-util.workspace = true


[dependencies.async-graphql]
version = "6.0.0"
features = ["log", "dataloader"]
