[package]
name = "scripts"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow.workspace = true
tokio.workspace = true

# layer paths ----------------
presentation-graphql.workspace = true
infrastructure-rdb.workspace = true


[dependencies.sqlx]
workspace = true
features = [
  "postgres",
  "runtime-tokio",
  "tls-rustls",
]
