[package]
name = "invariant-sheild-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
proc-macro-crate = "3.1.0"
proc-macro2 = "1.0.80"
quote = "1.0.36"

invariant-sheild-types.workspace = true

# comprex dependencies
[dependencies.syn]
version = "2.0.58"
features = ["full", "extra-traits"]
