[package]
name = "invariant-sheild"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
invariant-sheild-types.workspace = true
invariant-sheild-macros.workspace = true

[dev-dependencies]
invariant-sheild = { path = "" }
